initial placeholder until camera ready

--- a/index.html
+++ b/index.html
@@ -1,9 +1,72 @@
-<!doctype html>
-<html>
-  <head>
-    <title>RipVIS: Rip Currents Video Instance Segmentation Benchmark for Beach Monitoring and Safety!</title>
-  </head>
-  <body>
-    <p>Official website for RipVIS benchmark. Information will be made public soon for CVPR2025 camera ready.</p>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RipVIS - CVPR 2025</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+            text-align: center;
+        }
+        .container {
+            max-width: 800px;
+            margin: 100px auto;
+            padding: 40px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            font-size: 2.5em;
+            color: #2c3e50;
+            margin-bottom: 10px;
+        }
+        h2 {
+            font-size: 1.5em;
+            color: #34495e;
+            margin-top: 0;
+            font-weight: normal;
+        }
+        p {
+            font-size: 1.1em;
+            line-height: 1.6;
+            margin: 20px 0;
+        }
+        a {
+            color: #2980b9;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        footer {
+            margin-top: 40px;
+            font-size: 0.9em;
+            color: #777;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>RipVIS</h1>
+        <h2>Rip Currents Video Instance Segmentation Benchmark<br>for Beach Monitoring and Safety</h2>
+        <p>
+            Accepted at <strong>CVPR 2025</strong>
+        </p>
+        <p>
+            Welcome to the official page for RipVIS! Our large-scale video instance segmentation benchmark for rip current detection will be made publicly available here, along with datasets, models, and results, upon the release of the camera-ready paper in 2025.
+        </p>
+        <p>
+            Stay tuned for updates at <a href="https://ripvis.ai">ripvis.ai</a>.
+        </p>
+        <footer>
+            Hosted on GitHub Pages | &copy; 2025 RipVIS Team
+        </footer>
+    </div>
+</body>
 </html>
