add email to main page

--- a/index.html
+++ b/index.html
@@ -64,8 +64,11 @@
         <p>
             Stay tuned for updates at <a href="https://ripvis.ai">ripvis.ai</a>.
         </p>
+        <p>
+            Contact: <a href="mailto:andrei.dumitriu@uni-wuerzburg.de">andrei.dumitriu@uni-wuerzburg.de</a>
+        </p>
         <footer>
-            Hosted on GitHub Pages | &copy; 2025 RipVIS Team
+            Hosted on GitHub Pages | © 2025 RipVIS Team
         </footer>
     </div>
 </body>
