--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RipVIS - CVPR 2025</title>
+    <title>RipVIS - Rip Current Segmentation Benchmark</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -11,31 +11,50 @@
             padding: 0;
             background-color: #f4f4f4;
             color: #333;
+            line-height: 1.6;
+        }
+        header {
+            background-color: #2c3e50;
+            color: white;
+            padding: 20px;
             text-align: center;
         }
-        .container {
-            max-width: 800px;
-            margin: 100px auto;
-            padding: 40px;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
+        header h1 {
+            margin: 0;
             font-size: 2.5em;
-            color: #2c3e50;
-            margin-bottom: 10px;
+        }
+        nav {
+            background-color: #34495e;
+            padding: 10px;
+        }
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+        }
+        nav ul li {
+            margin: 0 20px;
+        }
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        nav ul li a:hover {
+            color: #2980b9;
+        }
+        .container {
+            max-width: 900px;
+            margin: 40px auto;
+            padding: 20px;
+            background-color: white;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
         h2 {
-            font-size: 1.5em;
-            color: #34495e;
-            margin-top: 0;
-            font-weight: normal;
-        }
-        p {
-            font-size: 1.1em;
-            line-height: 1.6;
-            margin: 20px 0;
+            color: #2c3e50;
         }
         a {
             color: #2980b9;
@@ -45,31 +64,44 @@
             text-decoration: underline;
         }
         footer {
-            margin-top: 40px;
-            font-size: 0.9em;
+            text-align: center;
+            padding: 20px;
             color: #777;
+            font-size: 0.9em;
         }
     </style>
 </head>
 <body>
-    <div class="container">
+    <header>
         <h1>RipVIS</h1>
-        <h2>Rip Currents Video Instance Segmentation Benchmark<br>for Beach Monitoring and Safety</h2>
+        <p>Rip Currents Video Instance Segmentation Benchmark</p>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#dataset">Dataset</a></li>
+            <li><a href="#benchmarks">Benchmarks</a></li>
+            <li><a href="#results">Results</a></li>
+            <li><a href="#history">History</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">About</a></li>
+        </ul>
+    </nav>
+    <div class="container" id="home">
+        <h2>Welcome to RipVIS</h2>
         <p>
-            Accepted at <strong>CVPR 2025</strong>
+            RipVIS is a large-scale video instance segmentation benchmark for rip current detection, accepted at <strong>CVPR 2025</strong>. 
+            Our goal is to advance beach safety by providing a comprehensive dataset and benchmark for researchers and practitioners.
         </p>
         <p>
-            Welcome to the official page for RipVIS! Our large-scale video instance segmentation benchmark for rip current detection will be made publicly available here, along with datasets, models, and results, upon the release of the camera-ready paper in 2025.
-        </p>
-        <p>
-            Stay tuned for updates at <a href="https://ripvis.ai">ripvis.ai</a>.
+            The full dataset, baseline models, and results will be released with the camera-ready paper in 2025. Stay tuned for updates!
         </p>
         <p>
             Contact: <a href="mailto:andrei.dumitriu@uni-wuerzburg.de">andrei.dumitriu@uni-wuerzburg.de</a>
         </p>
-        <footer>
-            Hosted on GitHub Pages | © 2025 RipVIS Team
-        </footer>
     </div>
+    <footer>
+        Hosted on GitHub Pages | © 2025 RipVIS Team
+    </footer>
 </body>
 </html>
