add specific date

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             Our goal is to advance beach safety by providing a comprehensive dataset and benchmark for researchers and practitioners.
         </p>
         <p>
-            The full dataset, baseline models, and results will be released with the camera-ready paper in 2025. Stay tuned for updates!
+            The full dataset, baseline models, and results will be released with the camera-ready paper, at the very latest <strong>June 2025</strong>. Stay tuned for updates!
         </p>
         <p>
             Contact: <a href="mailto:andrei.dumitriu@uni-wuerzburg.de">andrei.dumitriu@uni-wuerzburg.de</a>
