--- a/index_new.html
+++ b/index_new.html
@@ -4,92 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RipVIS - CVPR 2025</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-            text-align: center;
-        }
-        .container {
-            max-width: 900px;
-            margin: 100px auto 40px;
-            padding: 40px;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            font-size: 2.5em;
-            color: #2c3e50;
-            margin-bottom: 10px;
-        }
-        h2 {
-            font-size: 1.5em;
-            color: #34495e;
-            margin-top: 40px;
-            font-weight: normal;
-        }
-        p {
-            font-size: 1.1em;
-            line-height: 1.6;
-            margin: 20px 0;
-        }
-        a {
-            color: #2980b9;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        video {
-            border-radius: 8px;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-        }
-        footer {
-            margin-top: 60px;
-            font-size: 0.9em;
-            color: #777;
-        }
-        .highlight-box {
-            background-color: #dbeeff;
-            border-left: 6px solid #3498db;
-            padding: 20px;
-            margin: 40px auto;
-            border-radius: 8px;
-            max-width: 700px;
-        }
-        .video-row {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 30px;
-        }
-        .video-row p {
-            font-size: 0.95em;
-            margin-top: 10px;
-        }
-        .small-text {
-            font-size: 0.95em;
-            color: #555;
-        }
-        .results-table {
-            width: 100%;
-            margin-top: 20px;
-            border-collapse: collapse;
-        }
-        .results-table th, .results-table td {
-            border: 1px solid #ddd;
-            padding: 10px;
-        }
-        .results-table th {
-            background-color: #f4f4f4;
-            font-weight: bold;
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
     <div class="container">
@@ -115,19 +30,19 @@
         <div class="video-row">
             <div>
                 <video autoplay loop muted playsinline width="220">
-                    <source src="/assets/gifs/before_tca_26.gif" type="video/mp4">
+                    <source src="/assets/gifs/before_tca_26.mp4" type="video/mp4">
                 </video>
                 <p>Initial Detection</p>
             </div>
             <div>
                 <video autoplay loop muted playsinline width="220">
-                    <source src="assets/gifs/heatmap26.gif" type="video/mp4">
+                    <source src="/assets/gifs/heatmap26.mp4" type="video/mp4">
                 </video>
                 <p>TCA in Action</p>
             </div>
             <div>
                 <video autoplay loop muted playsinline width="220">
-                    <source src="assets/gifs/after_tca_26.gif" type="video/mp4">
+                    <source src="/assets/gifs/after_tca_26.mp4" type="video/mp4">
                 </video>
                 <p>Detection after TCA thresholding</p>
             </div>
@@ -135,34 +50,38 @@
         <div class="video-row">
             <div>
                 <video autoplay loop muted playsinline width="220">
-                    <source src="assets/gifs/before_tca_43.gif" type="video/mp4">
+                    <source src="/assets/gifs/before_tca_43.mp4" type="video/mp4">
                 </video>
                 <p>Initial Detection</p>
             </div>
             <div>
                 <video autoplay loop muted playsinline width="220">
-                    <source src="assets/gifs/heatmap_43.gif" type="video/mp4">
+                    <source src="/assets/gifs/heatmap_43.mp4" type="video/mp4">
                 </video>
                 <p>TCA in Action</p>
             </div>
             <div>
                 <video autoplay loop muted playsinline width="220">
-                    <source src="assets/gifs/after_tca_43.gif" type="video/mp4">
+                    <source src="/assets/gifs/after_tca_43.mp4" type="video/mp4">
                 </video>
                 <p>Detection after TCA thresholding</p>
             </div>
         </div>
 
         <h2>Paper & Citation</h2>
-        <p><a href="https://openaccess.thecvf.com/content/CVPR2025/papers/Dumitriu_RipVIS_Rip_Currents_Video_Instance_Segmentation_Benchmark_for_Beach_Monitoring_CVPR_2025_paper.pdf">Download the paper (PDF)</a></p>
-        <pre style="text-align: left; background: #f4f4f4; padding: 15px; border-radius: 8px;">
-            @inproceedings{dumitriu2025ripvis,
-            title={RipVIS: Rip Currents Video Instance Segmentation Benchmark for Beach Monitoring and Safety},
-            author={Dumitriu, Andrei and Tatui, Florin and Miron, Florin and Ralhan, Aakash and Ionescu, Radu Tudor and Timofte, Radu},
-            booktitle={Proceedings of the Computer Vision and Pattern Recognition Conference},
-            pages={3427--3437},
-            year={2025}
-            }
+        <p>
+            <a href="https://openaccess.thecvf.com/content/CVPR2025/papers/Dumitriu_RipVIS_Rip_Currents_Video_Instance_Segmentation_Benchmark_for_Beach_Monitoring_CVPR_2025_paper.pdf">
+                Download the paper (PDF)
+            </a>
+        </p>
+        <pre>
+@inproceedings{dumitriu2025ripvis,
+  title={RipVIS: Rip Currents Video Instance Segmentation Benchmark for Beach Monitoring and Safety},
+  author={Dumitriu, Andrei and Tatui, Florin and Miron, Florin and Ralhan, Aakash and Ionescu, Radu Tudor and Timofte, Radu},
+  booktitle={Proceedings of the Computer Vision and Pattern Recognition Conference},
+  pages={3427--3437},
+  year={2025}
+}
         </pre>
 
         <h2>Dataset Overview</h2>
