--- a/index_new.html
+++ b/index_new.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-    <div class="container">
+    header>
         <h1>RipVIS</h1>
         <h2>Rip Currents Video Instance Segmentation Benchmark<br>for Beach Monitoring and Safety</h2>
         <p>Accepted at <strong>CVPR 2025</strong></p>
+    </header>
 
+    <div class="container">
         <p>
             RipVIS is a large-scale video instance segmentation benchmark for detecting rip currents from real-world beach footage. It includes tasks such as classification, bounding box detection, oriented bounding boxes, semantic segmentation, and instance segmentation.
         </p>
