fix header typo

--- a/index_new.html
+++ b/index_new.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-    header>
+    <header>
         <h1>RipVIS</h1>
         <h2>Rip Currents Video Instance Segmentation Benchmark<br>for Beach Monitoring and Safety</h2>
         <p>Accepted at <strong>CVPR 2025</strong></p>
