--- a/index_new.html
+++ b/index_new.html
@@ -31,29 +31,29 @@
         <h2>Minimizing false negatives and false positives</h2>
         <div class="video-row">
             <div>
-                <img src="/assets/gifs/before_tca_26.gif" width="220" alt="Initial Detection" style="border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
+                <img src="/assets/gifs/before_tca_26.gif" class="media-item" alt="Initial Detection" style="border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
                 <p>Initial Detection</p>
             </div>
             <div>
-                <img src="/assets/gifs/heatmap26.gif" width="220" alt="TCA in Action" style="border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
+                <img src="/assets/gifs/heatmap26.gif" class="media-item" alt="TCA in Action" style="border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
                 <p>TCA in Action</p>
             </div>
             <div>
-                <img src="/assets/gifs/after_tca_26.gif" width="220" alt="Detection after TCA" style="border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
+                <img src="/assets/gifs/after_tca_26.gif" class="media-item" alt="Detection after TCA" style="border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
                 <p>Detection after TCA thresholding</p>
             </div>
         </div>
         <div class="video-row">
             <div>
-                <img src="/assets/gifs/before_tca_43.gif" width="220" alt="Initial Detection" style="border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
+                <img src="/assets/gifs/before_tca_43.gif" class="media-item" alt="Initial Detection" style="border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
                 <p>Initial Detection</p>
             </div>
             <div>
-                <img src="/assets/gifs/heatmap_43.gif" width="220" alt="TCA in Action" style="border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
+                <img src="/assets/gifs/heatmap_43.gif" class="media-item" alt="TCA in Action" style="border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
                 <p>TCA in Action</p>
             </div>
             <div>
-                <img src="/assets/gifs/after_tca_43.gif" width="220" alt="Detection after TCA" style="border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
+                <img src="/assets/gifs/after_tca_43.gif" class="media-item" alt="Detection after TCA" style="border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
                 <p>Detection after TCA thresholding</p>
             </div>
         </div>
