--- a/index_new.html
+++ b/index_new.html
@@ -59,7 +59,7 @@
         </div>
 
         <h2>Diverse Conditions and Annotation Types</h2>
-        <p>RipVIS includes scenes from drones, smartphones, and fixed cams in various lighting, wave, and sand conditions. Here's a visual overview of the diversity:</p>
+        <p>RipVIS includes scenes from drones, smartphones, and fixed cams in various lighting, wave, and sand conditions. Here's a visual overview:</p>
         <img src="/assets/images/dataset_diversity.png" alt="Dataset Diversity Overview" class="full-width-image">
 
 
