--- a/index_new.html
+++ b/index_new.html
@@ -70,6 +70,12 @@
         <p>RipVIS includes scenes from drones, smartphones, and fixed cams in various lighting, wave, and sand conditions. Here's a visual overview:</p>
         <img src="/assets/images/dataset_diversity.png" alt="Dataset Diversity Overview" class="full-width-image">
 
+        <h2>Global Data Sources</h2>
+        <p>
+            RipVIS includes beach footage from a variety of locations across the USA, Mexico, Costa Rica, Portugal, Italy, Greece, Romania, Sri Lanka, Australia, and New Zealand. 
+            This map shows the origin of videos in the dataset:
+        </p>
+        <img src="/assets/images/Countries_present_in_the_dataset_v1.2.png" alt="Global RipVIS Dataset Sources" class="full-width-image">
 
         <h2>Paper & Citation</h2>
         <p>
