--- a/index.html
+++ b/index.html
@@ -3,105 +3,113 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RipVIS - Rip Current Segmentation Benchmark</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-            line-height: 1.6;
-        }
-        header {
-            background-color: #2c3e50;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2.5em;
-        }
-        nav {
-            background-color: #34495e;
-            padding: 10px;
-        }
-        nav ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-        }
-        nav ul li {
-            margin: 0 20px;
-        }
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        nav ul li a:hover {
-            color: #2980b9;
-        }
-        .container {
-            max-width: 900px;
-            margin: 40px auto;
-            padding: 20px;
-            background-color: white;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        h2 {
-            color: #2c3e50;
-        }
-        a {
-            color: #2980b9;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        footer {
-            text-align: center;
-            padding: 20px;
-            color: #777;
-            font-size: 0.9em;
-        }
-    </style>
+    <title>RipVIS - CVPR 2025</title>
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
     <header>
         <h1>RipVIS</h1>
-        <p>Rip Currents Video Instance Segmentation Benchmark</p>
+        <h2>Rip Currents Video Instance Segmentation Benchmark<br>for Beach Monitoring and Safety</h2>
+        <p>Accepted at <strong>CVPR 2025</strong></p>
     </header>
-    <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#dataset">Dataset</a></li>
-            <li><a href="#benchmarks">Benchmarks</a></li>
-            <li><a href="#results">Results</a></li>
-            <li><a href="#history">History</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#about">About</a></li>
-        </ul>
-    </nav>
-    <div class="container" id="home">
-        <h2>Welcome to RipVIS</h2>
+
+    <div class="container">
         <p>
-            RipVIS is a large-scale video instance segmentation benchmark for rip current detection, accepted at <strong>CVPR 2025</strong>. 
-            Our goal is to advance beach safety by providing a comprehensive dataset and benchmark for researchers and practitioners.
+            RipVIS is a large-scale video instance segmentation benchmark for detecting rip currents from real-world beach footage. It is focused on instance segmentation for precise identification of rip currents.
         </p>
+
+        <div class="highlight-box">
+            <h2>🏁 ICCV 2025 Challenge Now Open</h2>
+            <p>
+                Participate in the RipVIS Challenge on rip current instance segmentation!<br>
+                <strong>Submission Deadline: July 9th, 2025</strong><br>
+                <a href="https://www.codabench.org/competitions/9109/">Click here to join</a>
+            </p>
+            <p class="small-text">Note: The full dataset will be released after the challenge concludes.</p>
+        </div>
+
+        <h2>Minimizing false negatives and false positives</h2>
+        <div class="video-row">
+            <div>
+                <img src="/assets/gifs/before_tca_26.gif" class="media-item" alt="Initial Detection" style="border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
+                <p>Initial Detection</p>
+            </div>
+            <div>
+                <img src="/assets/gifs/heatmap26.gif" class="media-item" alt="TCA in Action" style="border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
+                <p>TCA in Action</p>
+            </div>
+            <div>
+                <img src="/assets/gifs/after_tca_26.gif" class="media-item" alt="Detection after TCA" style="border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
+                <p>Detection after TCA thresholding</p>
+            </div>
+        </div>
+        <div class="video-row">
+            <div>
+                <img src="/assets/gifs/before_tca_43.gif" class="media-item" alt="Initial Detection" style="border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
+                <p>Initial Detection</p>
+            </div>
+            <div>
+                <img src="/assets/gifs/heatmap_43.gif" class="media-item" alt="TCA in Action" style="border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
+                <p>TCA in Action</p>
+            </div>
+            <div>
+                <img src="/assets/gifs/after_tca_43.gif" class="media-item" alt="Detection after TCA" style="border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
+                <p>Detection after TCA thresholding</p>
+            </div>
+        </div>
+
+        <h2>Temporal Confidence Aggregation (TCA)</h2>
         <p>
-            The full dataset, baseline models, and results will be released with the camera-ready paper, at the very latest <strong>June 2025</strong>. Stay tuned for updates!
+            TCA is a custom temporal post-processing method designed to reduce false positives and improve temporal consistency of rip current predictions. 
+            Below is a visual breakdown of its multi-stage filtering process:
         </p>
+        <img src="/assets/images/TCA_diagram_v1.4.png" alt="TCA Temporal Confidence Aggregation Steps" class="full-width-image">
+
+
+        <h2>Diverse Conditions and Annotation Types</h2>
+        <p>RipVIS includes scenes from drones, smartphones, and fixed cams in various lighting, wave, and sand conditions. Here's a visual overview:</p>
+        <img src="/assets/images/dataset_diversity.png" alt="Dataset Diversity Overview" class="full-width-image">
+
+        <h2>Global Data Sources</h2>
         <p>
+            RipVIS includes beach footage from a variety of locations across the USA, Mexico, Costa Rica, Portugal, Italy, Greece, Romania, Sri Lanka, Australia, and New Zealand. 
+            This map shows the origin of videos in the dataset:
+        </p>
+        <img src="/assets/images/Countries_present_in_the_dataset_v1.2.png" alt="Global RipVIS Dataset Sources" class="full-width-image">
+
+        <h2>Paper & Citation</h2>
+        <p>
+            <a href="https://openaccess.thecvf.com/content/CVPR2025/papers/Dumitriu_RipVIS_Rip_Currents_Video_Instance_Segmentation_Benchmark_for_Beach_Monitoring_CVPR_2025_paper.pdf">
+                Download the paper (PDF)
+            </a>
+        </p>
+        <pre>
+@inproceedings{dumitriu2025ripvis,
+  title={RipVIS: Rip Currents Video Instance Segmentation Benchmark for Beach Monitoring and Safety},
+  author={Dumitriu, Andrei and Tatui, Florin and Miron, Florin and Ralhan, Aakash and Ionescu, Radu Tudor and Timofte, Radu},
+  booktitle={Proceedings of the Computer Vision and Pattern Recognition Conference},
+  pages={3427--3437},
+  year={2025}
+}
+        </pre>
+
+        <h2>Dataset Overview</h2>
+        <p>
+            184 videos &middot; 212,328 frames<br>
+            Multi-source: drones, phones, fixed cams<br>
+            1 class: rip current (multi-instance)<br>
+        </p>
+        <p class="small-text">Note: The full dataset will be released after July 9th, 2025 (when ICCV challenge is done).</p>
+
+        <h2>License & Contact</h2>
+        <p>
+            RipVIS is released for research and safety purposes only (non-commercial use).<br>
             Contact: <a href="mailto:andrei.dumitriu@uni-wuerzburg.de">andrei.dumitriu@uni-wuerzburg.de</a>
         </p>
+
+        <footer>
+            Hosted on GitHub Pages | © 2025 RipVIS Team
+        </footer>
     </div>
-    <footer>
-        Hosted on GitHub Pages | © 2025 RipVIS Team
-    </footer>
 </body>
 </html>
