add larger resolution images

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             TCA is a custom temporal post-processing method designed to reduce false positives and improve temporal consistency of rip current predictions. 
             Below is a visual breakdown of its multi-stage filtering process:
         </p>
-        <img src="/assets/images/TCA_diagram_v1.4.png" alt="TCA Temporal Confidence Aggregation Steps" class="full-width-image">
+        <img src="/assets/images/TCA diagram v1.4.png" alt="TCA Temporal Confidence Aggregation Steps" class="full-width-image">
 
 
         <h2>Diverse Conditions and Annotation Types</h2>
@@ -75,7 +75,7 @@
             RipVIS includes beach footage from a variety of locations across the USA, Mexico, Costa Rica, Portugal, Italy, Greece, Romania, Sri Lanka, Australia, and New Zealand. 
             This map shows the origin of videos in the dataset:
         </p>
-        <img src="/assets/images/Countries_present_in_the_dataset_v1.2.png" alt="Global RipVIS Dataset Sources" class="full-width-image">
+        <img src="/assets/images/Countries_present_in_the_dataset v1.2.png" alt="Global RipVIS Dataset Sources" class="full-width-image">
 
         <h2>Paper & Citation</h2>
         <p>
