replace video with embeded link

--- a/index.html
+++ b/index.html
@@ -84,25 +84,28 @@
             </a>
         </p>
         <pre>
-@inproceedings{dumitriu2025ripvis,
-  title={RipVIS: Rip Currents Video Instance Segmentation Benchmark for Beach Monitoring and Safety},
-  author={Dumitriu, Andrei and Tatui, Florin and Miron, Florin and Ralhan, Aakash and Ionescu, Radu Tudor and Timofte, Radu},
-  booktitle={Proceedings of the Computer Vision and Pattern Recognition Conference},
-  pages={3427--3437},
-  year={2025}
-}
+            @inproceedings{dumitriu2025ripvis,
+            title={RipVIS: Rip Currents Video Instance Segmentation Benchmark for Beach Monitoring and Safety},
+            author={Dumitriu, Andrei and Tatui, Florin and Miron, Florin and Ralhan, Aakash and Ionescu, Radu Tudor and Timofte, Radu},
+            booktitle={Proceedings of the Computer Vision and Pattern Recognition Conference},
+            pages={3427--3437},
+            year={2025}
+            }
         </pre>
-<h2>Video Presentation</h2>
-<p>
-    Watch a short presentation introducing RipVIS, its motivation, design, and key results:
-</p>
-<div style="position:relative; padding-bottom:56.25%; height:0; overflow:hidden; max-width:100%; margin: 30px auto; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.15);">
-    <iframe src="https://www.youtube.com/watch?v=kLtlnneEDEc" 
-            frameborder="0" 
-            allowfullscreen 
-            style="position:absolute; top:0; left:0; width:100%; height:100%;">
-    </iframe>
-</div>
+        <h2>Video Presentation</h2>
+        <p>
+            Watch a short presentation introducing RipVIS, its motivation, design, and key results:
+        </p>
+        <div style="position:relative; padding-bottom:56.25%; height:0; overflow:hidden; max-width:100%; margin: 30px auto; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.15);">
+            <iframe 
+                src="https://www.youtube.com/embed/kLtlnneEDEc"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+                style="position:absolute; top:0; left:0; width:100%; height:100%;">
+            </iframe>
+        </div>
+
 
         <h2>Dataset Overview</h2>
         <p>
