close challenge and add citations bib

--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
         </p>
 
         <div class="highlight-box">
-            <h2>🏁 ICCV 2025 Challenge Now Open</h2>
+            <h2>🏁 ICCV 2025 Challenge Closed</h2>
             <p>
-                Participate in the RipVIS Challenge on rip current instance segmentation!<br>
-                <strong>Submission Deadline: August 4th, 2025</strong><br>
-                <a href="https://www.codabench.org/competitions/9109/">Click here to join</a>
+                The AIM 2025 Rip Current Segmentation (RipSeg) Challenge has concluded.<br>
+                <strong>Thank you to all participants!</strong><br>
+                <a href="https://arxiv.org/abs/2508.13401">Read the RipSeg Challenge report paper</a>
+                <a href="https://www.codabench.org/competitions/9109/">View the competition page</a>
+
             </p>
-            <p class="small-text">Note: The full dataset will be released after the challenge concludes.</p>
+            <p class="small-text">Note: The full dataset will be released by the end of August. Stay tuned for more!</p>
         </div>
 
         <h2>Minimizing false negatives and false positives</h2>
@@ -85,11 +87,29 @@
         </p>
         <pre>
             @inproceedings{dumitriu2025ripvis,
-            title={RipVIS: Rip Currents Video Instance Segmentation Benchmark for Beach Monitoring and Safety},
-            author={Dumitriu, Andrei and Tatui, Florin and Miron, Florin and Ralhan, Aakash and Ionescu, Radu Tudor and Timofte, Radu},
-            booktitle={Proceedings of the Computer Vision and Pattern Recognition Conference},
-            pages={3427--3437},
-            year={2025}
+                author    = {Dumitriu, Andrei and Tatui, Florin and Miron, Florin and Ralhan, Aakash and Ionescu, Radu Tudor and Timofte, Radu},
+                title     = {RipVIS: Rip Currents Video Instance Segmentation Benchmark for Beach Monitoring and Safety},
+                booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+                month     = {June},
+                year      = {2025},
+                pages     = {3427--3437}
+            }
+        </pre>
+        <pre>
+            @inproceedings{aim2025ripseg,
+                title={{AIM} 2025 Challenge on Rip Current Segmentation ({RipSeg})},
+                author={Andrei Dumitriu and Florin Miron and Florin Tatui and Radu Tudor Ionescu and Radu Timofte and Aakash Ralhan and Florin-Alexandru Vasluianu and others},
+                booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV) Workshops},
+                year={2025}
+            }
+        </pre>
+        <pre>
+            @inproceedings{dumitriu2023rip,
+                title="{Rip Current Segmentation: A novel benchmark and YOLOv8 baseline results}",
+                author={Dumitriu, Andrei and Tatui, Florin and Miron, Florin and Ionescu, Radu Tudor and Timofte, Radu},
+                booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) Workshops},
+                pages={1261--1271},
+                year={2023}
             }
         </pre>
         <h2>Video Presentation</h2>
