--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             Multi-source: drones, phones, fixed cams<br>
             1 class: rip current (multi-instance)<br>
         </p>
-        <p class="small-text">Note: The full dataset will be released after August 4th, 2025 (when ICCV challenge is done).</p>
+        <p class="small-text">Note: The full dataset will be released after by the end of August 2025 (when ICCV challenge concludes).</p>
 
         <h2>License & Contact</h2>
         <p>
