add break line between links

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p>
                 The AIM 2025 Rip Current Segmentation (RipSeg) Challenge has concluded.<br>
                 <strong>Thank you to all participants!</strong><br>
-                <a href="https://arxiv.org/abs/2508.13401">Read the RipSeg Challenge report paper</a>
+                <a href="https://arxiv.org/abs/2508.13401">Read the RipSeg Challenge report paper</a> <br>
                 <a href="https://www.codabench.org/competitions/9109/">View the competition page</a>
 
             </p>
