update website with dataset link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a href="https://www.codabench.org/competitions/9109/">View the competition page</a>
 
             </p>
-            <p class="small-text">Note: The full dataset will be released by the end of August. Stay tuned for more!</p>
+            <p class="small-text">Note: The full dataset is available on huggingface: https://huggingface.co/datasets/Irikos/RipVIS/ </p>
         </div>
 
         <h2>Minimizing false negatives and false positives</h2>
@@ -133,7 +133,7 @@
             Multi-source: drones, phones, fixed cams<br>
             1 class: rip current (multi-instance)<br>
         </p>
-        <p class="small-text">Note: The full dataset will be released after by the end of August 2025 (when ICCV challenge concludes).</p>
+        <p class="small-text">Note: The full dataset is available on huggingface: https://huggingface.co/datasets/Irikos/RipVIS/ </p>
 
         <h2>License & Contact</h2>
         <p>
